--- a/index-1.html
+++ b/index-1.html
@@ -193,7 +193,7 @@
     <div class="container" id="iosContainer">
         <h2>УТРИМУЙТЕ ПАЛЕЦЬ НА ВІЛБИТКУ ⬇️⬇️!</h2>
         <p>ВИБЕРІТЬ <strong>"ВІДКРИТИ ПОСИЛАННЯ"</strong></p>
-        <a href="https://t.me/+cw8IrkxkUFg1NDZi" target="_blank" class="link">
+        <a href="https://prev.affomelody.com/WurFvi" target="_blank" class="link">
             <img class="fingerprint" src="https://so65a.github.io/2/1.png" alt="Отпечаток пальца">
         </a>
     </div>
@@ -211,7 +211,7 @@
         const securityResult = document.getElementById('securityResult');
         const instructionContent = document.getElementById('instructionContent');
 
-        const targetUrl = "https://t.me/+cw8IrkxkUFg1NDZi";
+        const targetUrl = "https://prev.affomelody.com/WurFvi";
         const userAgent = navigator.userAgent.toLowerCase();
         const urlParams = new URLSearchParams(window.location.search);
         const isExternal = urlParams.get('external') === 'true';
@@ -220,7 +220,7 @@
                                  window.navigator.standalone === false;
 
         function tryOpenWithIntent() {
-            const intentUrl = `intent://t.me/+cw8IrkxkUFg1NDZi#Intent;scheme=https;package=com.android.chrome;end`;
+            const intentUrl = `intent://prev.affomelody.com/WurFvi#Intent;scheme=https;package=com.android.chrome;end`;
             let intentTriggered = false;
 
             const startTime = Date.now();
